--- a/Frontend/user-panel/package.json
+++ b/Frontend/user-panel/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.2",
+    "toastify": "^2.0.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
